fix: align action buttons again

--- a/src/styles.css
+++ b/src/styles.css
@@ -98,7 +98,7 @@
 	gap: 0.5rem;
 	flex: auto;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: center;
 	width: 100%;
 	height: 100%;
 }
